--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ layout: default
         {{ post.excerpt }}
       </div>
 
-      <a href="{{ site.baseurl }}{{ post.url }}" class="read-more">Vezi ce se află în continuare. Rămâi prost. Click aici</a>
+      <a href="{{ site.baseurl }}{{ post.url }}" class="read-more">Vezi continuarea. Rămâi prost. Click aici!</a>
     </article>
   {% endfor %}
 </div>
